[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-quality-env"
version = "0.1.0"
description = "OpenEnv environment for code readability/logging/comment review"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenEnv Hackathon Submission" }]
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["code_quality_env*"]
